# Project-Viikate

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  design_decision_record_DDR.md  design_decision_record_template  flake.nix  rocketry_critical_design_decision_template.md
.github/workflows/: ci.yml
Guidance, Navigation and Control/Flight Code/: monitor.py  platformio.ini  pleasepleasepleasepleasepleasepleasepleaseplease.py
Guidance, Navigation and Control/Flight Code/include/: Constants.h  Control.h  Datalogger.h  Sensors.h  StateMachine.h  constants.h  control.h  control_hardware.h  data_logger.h  debug_prints.h  flight_data.h  pose.h  remote_config.h  sensors.h  state_machine.h
Guidance, Navigation and Control/Flight Code/src/: Control.cpp  Datalogger.cpp  Sensors.cpp  StateMachine.cpp  control.cpp  control_hardware.cpp  data_logger.cpp  flight_data.cpp  main.cpp  pose.cpp  remote_config.cpp  sensors.cpp  state_machine.cpp
Guidance, Navigation and Control/Flight Code/test/: simulated_flight_data_1.csv  test_main.cpp
Guidance, Navigation and Control/Simulation/closedModel/: closedmodel.slx  (+1 more)
Guidance, Navigation and Control/Visualization/: 3d.py
Stuctrure/OpenRocket designs/: viikateV04.ork  viikateV05.ork
avionics/: avionics DDRs  avionics.kicad_pcb  avionics_DDRs.md  everythingeverywhereallatonce.ino  fp-info-cache
avionics/imucalattempt/: imucalattempt.ino
cad/: README.md
code/: .clang-format  README.md  meson.build  meson_options.txt
code/cross/: teensy.ini
code/firmware/: imxrt1062.ld  meson.build
code/firmware/src/: main.c  startup.c
code/hal/: hal.h  meson.build
code/hal/include/: hal.h  mock.h  teensy41.h
code/hal/src/: hal.c  mock.c  teensy41.c
code/shared/: meson.build
code/shared/include/: defs.h  linmath.h  vector.h
dashboard/: Cargo.toml
dashboard/src/: main.rs
docs/: conf.py  index.rst
docs/avionics/: hardware.rst  index.rst  software.rst
docs/rfc/: RFC-000-template.md  RFC-001-avionics-v2.md
